# esp32_lorawan_audio_sensor_node

./: .gitignore  CMakeLists.txt  decoder.js  readme.md  sdkconfig  sdkconfig.old
components/RadioLib/: CMakeLists.txt
components/RadioLib/src/hal/ESP32S3Hal/: Esp32S3Hal.cpp  Esp32S3Hal.hpp
main/: CMakeLists.txt  esp_lorawan.cpp  esp_lorawan_mic.cpp  esp_mic.c
